[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-f5-aiguardrails"
dynamic = ["version"]
description = "LangChain agent middleware for F5 AI Guardrails — runtime security scanning of LLM prompts and responses."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "F5 AI Guardrails Team"},
]
keywords = ["langchain", "f5", "guardrails", "ai-security", "llm", "middleware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = [
    "langchain-openai>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
    "langchain-openai>=0.3",
]
examples = [
    "langchain-openai>=0.3",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/f5/langchain-f5-aiguardrails"
Documentation = "https://github.com/f5/langchain-f5-aiguardrails#readme"
Repository = "https://github.com/f5/langchain-f5-aiguardrails"
Issues = "https://github.com/f5/langchain-f5-aiguardrails/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "langchain_f5_aiguardrails._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
